<resources>
    <string name="app_name">goodhabitbeta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="humidity">Humidity</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="click_on_your_zordic_sign">Click on your Zodiac Sign</string>
    <string name="ok">OK</string>
    <string name="permission_rationale">Location data is used as part of the Google Fit API</string>
    <string name="settings">Settings</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core         functionality.</string>
    <string name="hello_kunal">Hello, Kunal</string>
    <string name="time_tracking">Time Tracking</string>
    <string name="upcoming_alarms">Upcoming alarms</string>
    <string name="breakfast_notification_channel_description">Breakfast reminder</string>
    <string name="egg_notification_channel_id" translatable="false">egg_channel</string>
    <string name="egg_notification_channel_name" translatable="true">Egg</string>
    <string name="breakfast_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="breakfast_notification_channel_name" translatable="true">Breakfast</string>
    <string name="eggs_ready">Your Egg is Ready</string>
    <string name="notification_title">Egg Boiled</string>
    <string name="it_s_time_to_drink_water">It\'s time to drink water</string>
    <string name="super_alarm">Super Alarm</string>
    <string name="preview">Preview</string>
    <string name="snooze">Snooze</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="select_ringtone">Select Ringtone</string>
    <string name="volume">Volume</string>
    <string name="save">Save</string>
    <string name="stop_watch">Stop Watch</string>
    <string name="exit_preview">Exit preview</string>
    <string name="dismiss">Dismiss</string>
    <string name="set_default">Set default</string>
    <string name="please_enter_a_label">Please enter a label</string>
    <string name="set_size">Set size</string>
    <string name="label">Label</string>
    <string name="select_missions">Select missions</string>
    <string name="set_the_amount_and_type_of_phrases_to_be_entered_to_stop_the_alarm">Set the amount and type of phrases to be entered to stop the alarm</string>
    <string name="motivational_phrases">Motivational phrases</string>
    <string name="general_phrases">General phrases</string>
    <string name="typing">Typing</string>
    <string name="title_math_mission">Select the difficulty of the math problems you will solve to dismiss your alarm.</string>
    <string name="title_shake_mission">Select how many times you will shake your phone to dismiss your alarm.</string>
    <string name="shake">Shake</string>

    <string name="difficulty">Difficulty</string>
    <string name="math">Math</string>
    <string name="title_memory_mission">Select the difficulty of the memory game you will play to dismiss your alarm.</string>
    <string name="memory">Memory</string>
    <string name="title_barcode_mission">Select a QR code or barcode far from your bed that you will scan to dismiss your alarm.</string>
    <string name="or_barcode">OR/Barcode</string>
    <string name="i">i</string>
    <string name="wake_up_check">Wake up check</string>
    <string name="none">Off</string>
    <string name="_1_min">1 min</string>
    <string name="_3_min">3 min</string>
    <string name="_5_min">5 min</string>
    <string name="_7_min">7 min</string>
    <string name="_10_min">10 min</string>

    <string-array name="upcomingAlarmsMenu">
        <item>Edit</item>
        <item>Duplicate</item>
        <item>Delete</item>
    </string-array>
</resources>