<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_20sdp"
    android:background="@drawable/rectangle_background">

    <TextView
        android:id="@+id/titleWakeupSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/wake_up_check"
        android:textColor="#504F4F"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/iButtonWakeup"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/strokedroundbutton"
        android:backgroundTint="@color/purpleTheme"
        android:text="@string/i"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupWakeupCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/_25sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleWakeupSheet">

        <RadioButton
            android:id="@+id/radioNoneWakeup"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:buttonTint="@color/purpleTheme"
            android:text="@string/none"
            android:paddingStart="@dimen/_5sdp"
            android:gravity="center_vertical"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_14ssp" />

        <RadioButton
            android:id="@+id/radioOneMinWakeup"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_20sdp"
            android:paddingStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:buttonTint="@color/purpleTheme"
            android:text="@string/_1_min"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_14ssp" />
        <RadioButton
            android:id="@+id/radioThreeMinWakeup"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:paddingStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:buttonTint="@color/purpleTheme"
            android:text="@string/_3_min"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_14ssp" />

        <RadioButton
            android:id="@+id/radioFiveMinWakeup"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:buttonTint="@color/purpleTheme"
            android:text="@string/_5_min"
            android:paddingStart="@dimen/_5sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_14ssp" />
        <RadioButton
            android:id="@+id/radioSevenMinWakeup"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:buttonTint="@color/purpleTheme"
            android:text="@string/_7_min"
            android:paddingStart="@dimen/_5sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_14ssp" />

        <RadioButton
            android:id="@+id/radioTenMinWakeup"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:paddingStart="@dimen/_5sdp"
            android:buttonTint="@color/purpleTheme"
            android:text="@string/_10_min"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_14ssp" />
    </RadioGroup>
    <soup.neumorphism.NeumorphButton
        android:id="@+id/saveWakeupCheck"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:background="@color/purpleTheme"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupWakeupCheck"
        app:neumorph_backgroundColor="@color/purpleTheme"
        app:neumorph_shadowElevation="@dimen/_2sdp"
        app:neumorph_shapeAppearance="@style/NeumorphismCard" />


</androidx.constraintlayout.widget.ConstraintLayout>