<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:padding="@dimen/_15sdp">

    <TextView
        android:id="@+id/titleTypingMission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_the_amount_and_type_of_phrases_to_be_entered_to_stop_the_alarm"
        android:textAlignment="center"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupTypingMission"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTypingMission">

        <RadioButton
            android:id="@+id/radioGeneralTypingMission"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:buttonTint="@color/purpleTheme"
            android:text="@string/general_phrases"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_14ssp" />

        <RadioButton
            android:id="@+id/radioMotivationalTypingMission"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:buttonTint="@color/purpleTheme"
            android:text="@string/motivational_phrases"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_14ssp" />
    </RadioGroup>

    <ImageView
        android:id="@+id/iconTypingMission"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:scaleType="fitXY"
        android:src="@drawable/keyboard_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupTypingMission"
        tools:ignore="contentDescription" />

    <TextView
        android:id="@+id/iconTitleTypingMission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/typing"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="@+id/iconTypingMission"
        app:layout_constraintStart_toStartOf="@+id/iconTypingMission"
        app:layout_constraintTop_toBottomOf="@+id/iconTypingMission" />

    <NumberPicker
        android:id="@+id/numberPickerTypingMission"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/iconTitleTypingMission"
        app:layout_constraintEnd_toStartOf="@+id/numberPickerTitleTypingMission"
        app:layout_constraintTop_toTopOf="@+id/iconTypingMission" />

    <TextView
        android:id="@+id/numberPickerTitleTypingMission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Number of\nPhrases"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="@+id/numberPickerTypingMission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/numberPickerTypingMission" />

    <soup.neumorphism.NeumorphButton
        android:id="@+id/saveTypingMission"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:background="@color/purpleTheme"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconTitleTypingMission"
        app:neumorph_backgroundColor="@color/purpleTheme"
        app:neumorph_shadowElevation="@dimen/_2sdp"
        app:neumorph_shapeAppearance="@style/NeumorphismCard"
        tools:layout_editor_absoluteX="33dp" />


</androidx.constraintlayout.widget.ConstraintLayout>